--- a/.env.sample
+++ b/.env.sample
@@ -2,8 +2,14 @@
 HOST=
 PORT=
 BASE_URL=
+FILE_UPLOADED_URL=
 
 # MONGODB
 DB_USER=
 DB_PASSWORD=
 DB_NAME=
+
+# CLOUDINARY
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
